change: better zero downtime handling

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -47,4 +47,10 @@ server {
     proxy_ssl_certificate_key     {{location.ssl.CertificateKey}};
     {% endif  %}
   }{% endfor %}{% endif %}
+  proxy_connect_timeout                   2s;
+  proxy_send_timeout                      2s;
+  proxy_read_timeout                      2s;
+  proxy_next_upstream                     error timeout;
+  proxy_next_upstream_timeout             2s;
+  proxy_next_upstream_tries               3;
 }
