--- a/bin/ncproxy/src/models/templates/nginx.conf
+++ b/bin/ncproxy/src/models/templates/nginx.conf
@@ -1,13 +1,19 @@
 user  root;
-worker_processes auto;
 
 pid /run/nginx.pid;
 
 include /etc/nginx/modules-enabled/*.conf;
 
+worker_processes auto;
+
+worker_rlimit_nofile 15360;
+
+worker_shutdown_timeout 240s;
+
 events {
-  worker_connections 4096;
-  #multi_accept on;
+	multi_accept        on;
+	worker_connections  16384;
+	use                 epoll;
 }
 
 ##
@@ -100,20 +106,13 @@ http {
   ## Enable gzip compression
   gzip on;
   gzip_vary on;
-  # gzip_proxied any;
-  gzip_comp_level 9;
+  gzip_proxied any;
+  gzip_comp_level 4;
   gzip_buffers 16 8k;
   gzip_http_version 1.1;
-  gzip_types image/webp image/png text/plain text/css text/xml text/javascript application/x-javascript application/javascript application/xml font/eot font/otf font/ttf;
+  gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml image/x-icon image/vnd.microsoft.icon application/vnd.ms-fontobject application/x-font-ttf application/font-woff application/font-woff2 font/opentype;
   ## Disable gzip for IE6
   gzip_disable "MSIE [1-6].";
-
-  # gzip_vary on;
-  # gzip_proxied any;
-  # gzip_comp_level 6;
-  # gzip_buffers 16 8k;
-  # gzip_http_version 1.1;
-  # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   ##
   # Virtual Host Configs
