fix/ncproxy: disable https redirection for hsts

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -3,27 +3,26 @@ limit_req_zone $binary_remote_addr zone={{ key }}:{{ limit_req_zone.Size   }}m r
 {% endif %}
 
 server {
-  listen {{ listen }};
   {% if ssl %}
   listen {{ listen_https }} http2 ssl;
+  {% else %}
+  listen {{ listen }};
   {% endif %}
   {% if domain %}server_name {{ domain }};
   if ($host != {{ domain }}) {
     return 502;
   }{% endif %}
   {% if ssl %}
-  if ($scheme != https) {
-      return 301 https://$host$request_uri;
-  }
   ssl_certificate         {{ssl.Certificate}};
   ssl_certificate_key     {{ssl.CertificateKey}};{% if ssl.Dhparam %}
-  ssl_dhparam             {{ssl.Dhparam}};
+  ssl_dhparam             {{ssl.Dhparam}};{% endif %}
   ssl_protocols           SSLv3 TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers             HIGH:!aNULL:!MD5;
   ssl_session_cache       shared:SSL:20m;
   ssl_session_timeout     4h;
-  ssl_handshake_timeout   30s;
-  {% endif %}{% if ssl.CertificateClient %}ssl_client_certificate  {{ssl.CertificateClient}};
+  # ssl_handshake_timeout   30s;
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+  {% if ssl.CertificateClient %}ssl_client_certificate  {{ssl.CertificateClient}};
   {% endif %}{% if ssl.VerifyClient %}
   ssl_verify_client       on;
   {% endif %}{% endif %}{% if hide_upstream %}{% else %}{% for location in locations %}
