--- a/bin/nanocl/Dockerfile
+++ b/bin/nanocl/Dockerfile
@@ -61,8 +61,8 @@ RUN export ARCH=$(uname -m) && \
 # stage 4 - create runtime image
 FROM --platform=$BUILDPLATFORM scratch
 
-LABEL org.opencontainers.image.source https://github.com/next-hat/nanocl
-LABEL org.opencontainers.image.description Nanocl Cli
+LABEL org.opencontainers.image.source=https://github.com/next-hat/nanocl
+LABEL org.opencontainers.image.description="Nanocl Cli"
 
 COPY --from=builder /bin/nanocl /bin/nanocl
 
