--- a/bin/nanocld/Dockerfile
+++ b/bin/nanocld/Dockerfile
@@ -70,8 +70,8 @@ COPY ./bin/nanocld/entrypoint.sh /entrypoint.sh
 
 RUN chmod +x /entrypoint.sh
 
-LABEL org.opencontainers.image.source https://github.com/next-hat/nanocl
-LABEL org.opencontainers.image.description Nanocl Daemon
+LABEL org.opencontainers.image.source=https://github.com/next-hat/nanocl
+LABEL org.opencontainers.image.description="Nanocl Daemon"
 
 ## Set entrypoint
 ENTRYPOINT ["/bin/bash", "/entrypoint.sh"]
