refactor: change Internal to Local for network binding

--- a/examples/crash_example.yml
+++ b/examples/crash_example.yml
@@ -10,7 +10,7 @@ Resources:
   Data:
     Rules:
     - Domain: crash-example.com
-      Network: Internal
+      Network: Local
       Locations:
       - Path: /
         Target:
