--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -14,7 +14,7 @@ Resources:
   Data:
     Rules:
     - Domain: ${{ Args.domain }}
-      Network: Internal
+      Network: Local
       Locations:
       - Path: /
         Target:
