--- a/examples/replication.yml
+++ b/examples/replication.yml
@@ -10,7 +10,7 @@ Resources:
   Data:
     Rules:
     - Domain: replication-example.com
-      Network: Internal
+      Network: Local
       Locations:
       - Path: /
         Target:
