--- a/crates/nanocl_error/Cargo.toml
+++ b/crates/nanocl_error/Cargo.toml
@@ -14,6 +14,8 @@ bench = false
 
 [features]
 io = []
+dev = ["backtrace"]
+backtrace = []
 ntex = ["dep:ntex"]
 http = ["ntex", "dep:serde_json"]
 http_client = ["io", "http", "serde_urlencoded"]
