--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   release_image:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container: rust:1.78.0-alpine3.20
 
     steps:
