fix/nanocld: init container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -168,11 +168,11 @@ services:
     image: ghcr.io/next-hat/nanocl-dev:dev
     tty: true
     hostname: nanocl.internal
-    networks:
-      - nanoclbr0
+    # network_mode: host
     ports:
       - 8585:8585
-      - 9443:9443
+    networks:
+      - nanoclbr0
     labels:
       - io.nanocl=enabled
       - io.nanocl.kind=cargo
