--- a/examples/fail_init_container.yml
+++ b/examples/fail_init_container.yml
@@ -8,7 +8,7 @@ Cargoes:
 - Name: deploy-example
   InitContainer:
     Image: alpine:latest
-    Cmd: ["ls", "5"]
+    Cmd: ["ls"]
   Container:
     Replication:
       Name: Auto
