Update checkout usage and dependabot configs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "github-actions"
+      # Workflow files stored in the
+      # default location of `.github/workflows`
+    directory: "/"
+    schedule:
+      interval: "weekly"
