wip: upgrade to utoipa 0.8

--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -34,7 +34,7 @@ nanocl_utils = { version = "0.7", features = ["build_tools"] }
 
 [dev-dependencies]
 serde_yaml = "0.9"
-bollard-next = "0.16.1"
+bollard-next = { version = "0.18.1" }
 
 [dependencies]
 nanocl_error = { version = "0.5", features = [
@@ -57,7 +57,7 @@ notify = { version = "6.1", default-features = false, features = [
 ] }
 nanocld_client = { version = "0.16", features = ["tokio"] }
 nanocl_utils = { version = "0.7", features = ["ntex", "logger", "versioning"] }
-utoipa = { version = "4.2", features = ["yaml"], optional = true }
+utoipa = { version = "5", features = ["yaml"], optional = true }
 chrono = { version = "0.4", default-features = false, features = [
   "std",
   "clock",
