--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -15,7 +15,7 @@ bench = false
 [features]
 default = ["serde"]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
-utoipa = ["dep:utoipa"]
+utoipa = ["dep:utoipa", "bollard-next/utoipa"]
 schemars = ["dep:schemars", "bollard-next/schemars"]
 clap = ["dep:clap"]
 test = []
@@ -23,13 +23,13 @@ test = []
 [dependencies]
 uuid = { version = "1.9" }
 serde_json = "1.0"
-bollard-next = { version = "0.16.1" }
+bollard-next = { version = "0.18.1" }
 chrono = { version = "0.4", default-features = false, features = [
   "std",
   "clock",
 ] }
 serde = { version = "1.0", features = ["derive"], optional = true }
-utoipa = { version = "4", features = ["uuid", "chrono"], optional = true }
+utoipa = { version = "5", features = ["uuid", "chrono"], optional = true }
 schemars = { version = "0.8", features = ["uuid1", "chrono"], optional = true }
 clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
 ipnet = { version = "2.10.0", features = ["serde"] }
