--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -37,7 +37,9 @@ serde_json = { version = "1.0", optional = true }
 futures = { version = "0.3", optional = true }
 utoipa = { version = "4.2", features = ["yaml"], optional = true }
 utoipa-swagger-ui = { version = "7.0", optional = true }
-libc = { version = "0.2", optional = true }
 clap = { version = "4.5", features = ["derive", "cargo"], optional = true }
 clap_mangen = { version = "0.2", optional = true }
 nanocl_error = { version = "0.5", optional = true }
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+libc = { version = "0.2", optional = true }
